--- a/example/src/locales/en/Common.json
+++ b/example/src/locales/en/Common.json
@@ -7,7 +7,10 @@
   "created": "Created",
   "usage": "Usage",
   "cost": "Cost",
+  "filterByName": "'Filter by Device Name...'",
+  "filterByDate": "Filter by Date",
   "searchPlaceholder": "Showing [VISIBLE] of [TOTAL]",
+  "clearText": "CLEAR ALL",
   "statusTypes": {
     "ok": "OK",
     "caution": "Caution",
