Update examples project to use i18.ts translations

--- a/packages/example/src/locales/en/Common.json
+++ b/packages/example/src/locales/en/Common.json
@@ -1,3 +1,8 @@
 {
-  "madeby": "Powered By:"
+  "madeby": "Powered By:",
+  "pageTitle": "Welcome",
+  "pageIntroduction":"Thanks for using our UI library.",
+  "breadcrumbs": {
+    "back": "Back"
+  }
 }
