--- a/packages/example/src/locales/ja/Common.json
+++ b/packages/example/src/locales/ja/Common.json
@@ -1,3 +1,8 @@
 {
-  "madeby": "Powered By:"
+  "madeby": "Powered By:",
+  "pageTitle": "ようこそ",
+  "pageIntroduction":"UIライブラリのご利用ありがとうございます。",
+  "breadcrumbs": {
+    "back": "戻る"
+  }
 }
