--- a/packages/example/src/locales/ja/GlobalUI.json
+++ b/packages/example/src/locales/ja/GlobalUI.json
@@ -1,9 +1,18 @@
 {
+  "login":"ログイン",
+  "logout": "ログアウト",
+  "currentUser":"現在のユーザー",
+  "keepOpenText":"開いた状態を維持",
+  "autoHideText":"自動で隠す",
+  "supportText":"ヘルプとサポート",
+  "noNotificationsText":"新着通知なし",
+  "readNotificationsText":"既読通知",
+  "unreadNotificationsText":"未読通知",
   "theme": {
-    "darkMode": "DARK MODE",
-    "lightMode": "LIGHT MODE",
-    "switchTheme": "SWITCH THEME",
-    "en": "English",
-    "ja": "Japanese"
+    "darkMode": "ダークモード",
+    "lightMode": "ライトモード",
+    "switchTheme": "テーマの変更",
+    "en": "英語",
+    "ja": "日本語"
   }
 }
