Feature/lang examples (#567)
* Update examples project to use i18.ts translations

* Add translations to Layouts

* Add translations to SplitLayout

* Update CustomDrawerPage with translations

--- a/packages/example/src/locales/en/Common.json
+++ b/packages/example/src/locales/en/Common.json
@@ -1,3 +1,47 @@
 {
-  "madeby": "Powered By:"
+  "madeby": "Powered By:",
+  "pageTitle": "Welcome",
+  "badgeTitle":"Guest",
+  "share":"Share",
+  "home":"Home",
+  "exampleAction": "Example Action",
+  "pageIntroduction":"Thanks for using our UI library.",
+  "example1": "Example 1",
+  "example2": "Example 2",
+  "accountOptions":"Account Options",
+  "aboutUs":"About us",
+  "team": "Team",
+  "contact":"Contact",
+  "company": "Company",
+  "tableExample":"Table Example",
+  "externalLink":"External link",
+  "onlineServices": "Online Services",
+  "serviceCustom": "Service custom",
+  "serviceSpecial": "Service special",
+  "serviceExtraSpecial": "Service Extra Special",
+  "onSiteServices":"On site Services",
+  "services":"Services",
+  "helloDrawer":"Example Drawer",
+  "noNotificationsText":"No new notifications",
+  "readNotificationsText":"Read",
+  "unreadNotificationsText":"UnRead",
+  "searchPlaceholder":"Search area names, etc.",
+  "accounts":"Accounts",
+  "billing":"Billing",
+  "payments":"Payments",
+  "descriptionTab1":"The below line uses the FullWidthContentBlock component to break out of the layout and span the full width of the browser.",
+  "titleTab2":"Content Tab 2",
+  "titleTab3":"Content Tab 3",
+  "formName": "Name",
+  "formDepartment": "Department",
+  "userDrawerTextP1":"Custom content can be injected under the user menu like this.",
+  "userDrawerTextP2":"The styling for this is left to you to include, keeping it flexible.",
+  "breadcrumbs": {
+    "back": "Back",
+    "firstText":"Examples",
+    "secondText":"Two",
+    "thirdText":"Third",
+    "fourText":"Four",
+    "fiveText":"Five"
+  }
 }
