--- a/packages/example/src/locales/ja/Common.json
+++ b/packages/example/src/locales/ja/Common.json
@@ -1,3 +1,47 @@
 {
-  "madeby": "Powered By:"
+  "madeby": "Powered By:",
+  "pageTitle": "ようこそ",
+  "badgeTitle":"ゲスト",
+  "share":"共有",
+  "home":"ホーム",
+  "example1": "サンプル 1",
+  "example2": "サンプル 2",
+  "exampleAction": "例1のアクション",
+  "pageIntroduction":"UIライブラリのご利用ありがとうございます。",
+  "accountOptions":"アカウントオプション",
+  "aboutUs":"会社概要",
+  "team":"チーム",
+  "contact":"コンタクト",
+  "company": "会社概要",
+  "tableExample":"テーブル例",
+  "externalLink":"外部リンク",
+  "onlineServices": "オンラインサービス",
+  "serviceCustom": "サービスカスタム",
+  "serviceSpecial":"サービススペシャル",
+  "serviceExtraSpecial":"特別なサービス",
+  "onSiteServices":"オンサイトサービス",
+  "services":"サービス",
+  "helloDrawer":"例ドラウェ",
+  "noNotificationsText":"新着通知なし",
+  "readNotificationsText":"既読通知",
+  "unreadNotificationsText":"未読通知",
+  "searchPlaceholder":"検索エリア名など",
+  "accounts":"アカウント一覧",
+  "billing":"請求",
+  "payments":"支払い",
+  "descriptionTab1":"以下の行では、FullWidthContentBlock コンポーネントを使用してレイアウトの制約を解除し、ブラウザーの全幅に広げています。",
+  "titleTab2":"タブ2の内容",
+  "titleTab3":"タブ3の内容",
+  "formName": "名",
+  "formDepartment": "部門",
+  "userDrawerTextP1":"カスタムコンテンツは、このようにユーザーメニューの下に挿入することができます",
+  "userDrawerTextP2":"スタイリングは自由に設定できます",
+  "breadcrumbs": {
+    "back": "戻る",
+    "firstText":"実例",
+    "secondText":"第2",
+    "thirdText":"第3",
+    "fourText":"第4",
+    "fiveText":"第5"
+  }
 }
